--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "expo-file-system": "^18.1.11",
     "expo-image-picker": "^16.1.4",
     "expo-location": "~18.1.6",
+    "expo-media-library": "^18.2.0",
     "expo-network": "~7.1.5",
     "expo-print": "~14.1.4",
     "expo-sharing": "~13.1.5",
