--- a/package.json
+++ b/package.json
@@ -78,8 +78,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "^20.0.1",
     "@types/react": "~19.0.10",
     "babel-plugin-module-resolver": "^5.0.0",
+    "react-native-make": "^1.0.1",
     "typescript": "~5.8.3"
   },
   "private": true
